<resources>
    <string name="app_name">Meler</string>
    <string name="logo">Logo</string>
    <string name="meler">MELER</string>
    <string name="versionApps">v.1.0 by ~Pay</string>
    <string name="multimedia_e_learning">Multimedia E-Learning</string>
    <string name="slogan">For Your Goals Beyond Horizon</string>

    <string name="download_channel_name">Download</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pemula">Pemula</string>
    <string name="teori">Teori</string>
    <string name="video">Video</string>
    <string name="semangat">Tetap Semangat!</string>
    <string name="pencapaian">Pencapaian</string>
    <string name="praktikum">Praktikum</string>
    <string name="jawaban">Jawaban</string>
    <string name="password">Password Materi</string>
    <string name="masukkanpassword">Masukkan Password Untuk Mengakses Jawaban</string>
    <string name="_55_100">55/100</string>
    <string name="_75">75%</string>
    <string name="judul_layout">Judul Layout</string>
    <string name="tutup">Tutup</string>
    <string name="tutupaplikasi">Tutup Meler?</string>
    <string name="tinggalkanaplikasi">Apa kamu yakin ingin meninggalkan pelajaran?</string>
    <string name="kerja_bagus">Kerja Bagus</string>
    <string name="ayo_kamu_dapat_lakukan_yang_terbaik">Ayo Kamu Dapat Lakukan Yang Terbaik!</string>
    <string name="skor_7_10">Skor: 7/10</string>
    <string name="_5_nkekuatan_super">+5\nKekuatan Super</string>
    <string name="beranda">Beranda</string>
    <string name="coba_lagi">COBA LAGI</string>
    <string name="pencapaian_saat_ini">Pencapaian Saat Ini</string>
    <string name="temukan_video_pembelajaran">Temukan Video Pembelajaran</string>
    <string name="nointernet">No Internet Connection</string>

    <string-array name="data_title">
        <item>Praktikum 1</item>
        <item>Praktikum 2</item>
        <item>Praktikum 3</item>
        <item>Praktikum 4</item>
        <item>Praktikum 5</item>
        <item>Praktikum 6</item>
        <item>Praktikum 7</item>
        <item>Praktikum 8</item>
        <item>Praktikum 9</item>
        <item>Praktikum 10</item>
    </string-array>

    <string-array name="data_subtitle">
        <item>Pendahuluan</item>
        <item>Nirmana dan Warna</item>
        <item>Tipografi</item>
        <item>Simbol dan Ikon</item>
        <item>Logo</item>
        <item>Logo</item>
        <item>Tata Letak</item>
        <item>Periklanan</item>
        <item>Desain Karakter</item>
        <item>Illustrasi</item>
    </string-array>

    <array name="data_image">
        <item>@drawable/x1</item>
        <item>@drawable/x2</item>
        <item>@drawable/x3</item>
        <item>@drawable/x4</item>
        <item>@drawable/x5</item>
        <item>@drawable/x6</item>
        <item>@drawable/x7</item>
        <item>@drawable/x8</item>
        <item>@drawable/x9</item>
        <item>@drawable/x10</item>
    </array>

    <array name="data_pdf2">
        <item>"praktikum 1.pdf"</item>
        <item>"praktikum 2.pdf"</item>
        <item>"praktikum 3.pdf"</item>
        <item>"praktikum 4.pdf"</item>
        <item>"praktikum 5.pdf"</item>
        <item>"praktikum 6.pdf"</item>
        <item>"praktikum 7.pdf"</item>
        <item>"praktikum 8.pdf"</item>
        <item>"praktikum 9.pdf"</item>
        <item>"praktikum 10.pdf"</item>
    </array>

    <array name="data_pageName2">
        <item>Pengenalan Adobe Illustrator</item>
        <item>Ayo Bernirmana</item>
        <item>Ciptakan Tipografimu</item>
        <item>Ayo Desain Logomu</item>
        <item>Membuat Brand</item>
        <item>Membuat Cover Buku</item>
        <item>Tracing dan Grafis</item>
        <item>Media Grafis</item>
        <item>Alat Promosi Digital</item>
        <item>Menggambar Karakter</item>
    </array>

    <string name="title">Judul</string>
    <string name="subtitle">Sub Judul</string>
    <string name="perancangangrafika">Perancangan Grafika</string>
    <string name="pleaserotate">Silakan Putar Perangkat Anda Untuk Menikmati Video Penuh Pengalaman</string>
    <string name="selanjutnya">Tekan Layar Untuk Menuju Soal Selanjutnya</string>
    <string name="pendahuluan">Pendahuluan</string>
    <string name="nirmana">Nirmana</string>
    <string name="warna">Warna</string>
    <string name="tipografi">Tipografi</string>
    <string name="simbol_amp_icon"><![CDATA[Simbol & Icon]]></string>
    <string name="tata_letak">Tata Letak</string>
    <string name="periklanan">Periklanan</string>
    <string name="desain_karakter">Desain Karakter</string>
    <string name="ilustrasi">Ilustrasi</string>
    <string name="loremipsum">A virus is a small infectious agent that replicates only inside the living cells of other organisms. Viruses can infect all types of life forms, from animals and plants to microorganisms, including bacteria and archaea.[1] The study of viruses is known as virology, a sub-speciality of microbiology.</string>
    <string name="jawaban_disimpan">Jawaban Disimpan</string>


    <string-array name="data_title2">
        <item>Teori 1</item>
        <item>Teori 2</item>
        <item>Teori 3</item>
        <item>Teori 4</item>
        <item>Teori 5</item>
        <item>Teori 6</item>
        <item>Teori 7</item>
        <item>Teori 8</item>
        <item>Teori 9</item>
        <item>Teori 10</item>
    </string-array>

    <string-array name="data_description">
        <item>Pembahasan Soal Pendahuluan</item>
        <item>Pembahasan Soal Nirmana</item>
        <item>Pembahasan Soal Warna</item>
        <item>Pembahasan Soal Tipografi</item>
        <item>Pembahasan Soal Simbol dan Ikon</item>
        <item>Pembahasan Soal Logo</item>
        <item>Pembahasan Soal Tata Letak</item>
        <item>Pembahasan Soal Periklanan</item>
        <item>Pembahasan Soal Desain Karakter</item>
        <item>Pembahasan Soal Illustrasi</item>
    </string-array>

    <array name="data_pdf">
        <item>"sample.pdf"</item>
        <item>"sample 2.pdf"</item>
        <item>"sample 3.pdf"</item>
        <item>"sample 4.pdf"</item>
        <item>"sample 5.pdf"</item>
        <item>"sample 6.pdf"</item>
        <item>"sample 7.pdf"</item>
        <item>"sample 8.pdf"</item>
        <item>"sample 9.pdf"</item>
        <item>"sample 10.pdf"</item>
    </array>

    <array name="data_pageName">
        <item>Ayo Pendahuluan</item>
        <item>Ayo Bernirmana</item>
        <item>Ayo Mewarna</item>
        <item>Ayo Bermain 4</item>
        <item>Ayo Bermain 5</item>
        <item>Ayo Bermain 6</item>
        <item>Ayo Bermain 7</item>
        <item>Ayo Bermain 8</item>
        <item>Ayo Bermain 9</item>
        <item>Ayo Bermain 10</item>
    </array>


</resources>
