<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/studentjourney"
        android:title="@string/teori"/>

    <item
        android:id="@+id/navigation_motion"
        android:icon="@drawable/book"
        android:title="@string/video"/>


    <item
        android:id="@+id/navigation_achievement"
        android:icon="@drawable/achievement"
        android:title="@string/pencapaian"/>

    <item
        android:id="@+id/navigation_praktikum"
        android:icon="@drawable/praktikum"
        android:title="@string/praktikum"/>

    <item
        android:id="@+id/navigation_jawaban"
        android:icon="@drawable/key"
        android:title="@string/jawaban"/>

</menu>
