<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvcompl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/kerja_bagus"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/holo_green_light"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvextra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/ayo_kamu_dapat_lakukan_yang_terbaik"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/color_red"
            android:textSize="20sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/lltest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvcompl"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/skor_7_10"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorBlue3"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/tvscore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/_5_nkekuatan_super"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorBlue3"
                android:textSize="22sp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lltest"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/doughnuttot"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvlevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/pemula"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlue3"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvprogress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/_55_100"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlue3"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <com.polibatam.meler.view.layout.FitDoughnut
                android:id="@+id/doughnuttot"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                app:fdColorPrimary="@color/colorAccent"/>

            <TextView
                android:id="@+id/tvpercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/doughnuttot"
                android:layout_alignLeft="@+id/doughnuttot"
                android:layout_alignRight="@+id/doughnuttot"
                android:layout_alignTop="@+id/doughnuttot"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/_75"
                android:textAlignment="center"
                android:textColor="@color/colorBlue3"
                android:textSize="30sp"
                android:textStyle="bold"/>

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorBlue3"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:weightSum="1">


        <Button
            android:id="@+id/btHome"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="0.50"
            android:background="@color/colorBlue3"
            android:elegantTextHeight="false"
            android:text="@string/beranda"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="0.50"
            android:background="#ffffffff"
            android:fontFamily="sans-serif"
            android:text="@string/coba_lagi"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/colorBlue3"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>